= {project-name} Changelog
:project-name: Kramdown AsciiDoc
:uri-repo: https://github.com/asciidoctor/kramdown-asciidoc

This document provides a high-level view of the changes to {project-name} by release.
For a detailed view of what has changed, refer to the {uri-repo}/commits/master[commit history] on GitHub.

== Unreleased

=== Fixed

* Convert language tag on source block to lowercase (#106)
* Turn off system-dependent newline conversion when writing output file

== 2.1.0 (2022-07-04) - @mojavelinux

=== Added

* Add support for multi-paragraph admonitions (#72)
* Add support for GFM-style admonitions (#103)
* Convert checkbox at start of items in a checklist (#94)
* Allow diagram languages to be specified and convert matching fenced code blocks to diagram literal blocks (#76)

=== Fixed

* Separate adjacent delimited literal blocks

=== Changed

* Upgrade kramdown to 2.4.x

=== Details

{url-repo}/releases/tag/v2.1.0[git tag] | {url-repo}/compare/v2.0.1\...v2.1.0[full diff]

== 2.0.1 (2022-06-29) - @mojavelinux

=== Fixed

* Fix crash when fenced code block is empty and does not specify a language (#93)
* Fix crash when input contains `<script>` tag (#98)
* Fix crash if blockquote ends with nested block (#96)
* Handle text that maps to an abbreviation (#97)
* Handle front matter value that is parsed as a date or datetime (#95)

=== Changed

* Add JRuby 9.3 to CI matrix

=== Details

{url-repo}/releases/tag/v2.0.1[git tag] | {url-repo}/compare/v2.0.0\...v2.0.1[full diff]

== 2.0.0 (2021-07-11) - @mojavelinux

=== Added

* Add support for converting block LaTeX math to stem block
* Add support for converting span LaTeX math to inline stem macro
* Add basic support for footnotes (#74)

=== Fixed

* Use File.read instead of IO.read to suppress magic subprocess behavior
* Enable compatibility with Ruby 3 by declaring rexml as a runtime dependency (#84)
* Don't crash when converting list item that only contains spaces (#83)

=== Changed
