@@ -1,0 +1,11 @@
+1. bread
+   1. french country
+   2. sourdough
+   3. multigrain
+2. milk
+   1. 2%
+      1. whole
+   2. skim
+3. eggs
+   1. brown
+   2. white
