@@ -1,0 +1,1 @@
+:nested_list_marker_indent: 3
